--- a/demo/index/aa.html
+++ b/demo/index/aa.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-bs-theme="dark">
 
 	<head>
 		<meta charset="utf-8" />
@@ -40,6 +40,7 @@
 						<a href="https://www.aventertainments.com/" rel="nofollow" target="_blank" class="my-2 p-1 text-center text-black-50 kuaijie-a-1"><img class="border rounded-circle w" src="https://www.aventertainments.com/favicon.ico" loading="lazy"><h6 class="t1">Ave</h6></a>
 						<a href="https://javbee.net/" rel="nofollow" target="_blank" class="my-2 p-1 text-center text-black-50 kuaijie-a-1"><img class="border rounded-circle w" src="https://javbee.net/favicon.ico" loading="lazy"><h6 class="t1">JAV</h6></a>
 						<a href="https://elsb.i6xh.news" rel="nofollow" target="_blank" class="my-2 p-1 text-center text-black-50 kuaijie-a-1"><img class="border rounded-circle w" src="https://www.jd.com/favicon.ico" loading="lazy"><h6 class="t1">2048xp</h6></a>
+						<a href="https://s2212v.cc" rel="nofollow" target="_blank" class="my-2 p-1 text-center text-black-50 kuaijie-a-1"><img class="border rounded-circle w" src="https://www.jd.com/favicon.ico" loading="lazy"><h6 class="t1">2048xp</h6></a>
 						<a href="https://www.nckao41.xyz/" rel="nofollow" target="_blank" class="my-2 p-1 text-center text-black-50 kuaijie-a-1"><img class="border rounded-circle w" src="https://www.nckao41.xyz/favicon.ico" loading="lazy"><h6 class="t1">嫩草影院</h6></a>
 						<a href="https://avmai.xyz/" rel="nofollow" target="_blank" class="my-2 p-1 text-center text-black-50 kuaijie-a-1"><img class="border rounded-circle w" src="https://avmai.xyz/favicon.ico" loading="lazy"><h6 class="t1">avman</h6></a>
 						<a href="https://www.xvideos.com/" rel="nofollow" target="_blank" class="my-2 p-1 text-center text-black-50 kuaijie-a-1"><img class="border rounded-circle w" src="https://www.xvideos.com/favicon.ico" loading="lazy"><h6 class="t1">xvideos</h6></a>
