--- a/demo/index/more.html
+++ b/demo/index/more.html
@@ -88,6 +88,7 @@
 						<a href="https://tool.browser.qq.com/" rel="nofollow" target="_blank" class="my-2 p-1 text-center text-black-50 kuaijie-a-1"><img  class="border rounded-circle w" src="https://tool.browser.qq.com/favicon.ico" loading="lazy"><h6 class="t1">帮小忙</h6></a>
 						<a href="https://123apps.com/" rel="nofollow" target="_blank" class="my-2 p-1 text-center text-black-50 kuaijie-a-1"><img  class="border rounded-circle w" src="https://123apps.com/favicon.ico" loading="lazy"><h6 class="t1">123apps</h6></a>
 						<a href="https://jianwai.youdao.com/" rel="nofollow" target="_blank" class="my-2 p-1 text-center text-black-50 kuaijie-a-1"><img  class="border rounded-circle w" src="https://jianwai.youdao.com/favicon.ico" loading="lazy"><h6 class="t1">网易见外工作台</h6></a>
+						<a href="https://cli.im/" rel="nofollow" target="_blank" class="my-2 p-1 text-center text-black-50 kuaijie-a-1"><img  class="border rounded-circle w" src="https://cli.im/favicon.ico" loading="lazy"><h6 class="t1">草料二维码</h6></a>
 					</div>
 			</div>
 
@@ -102,8 +103,8 @@
 						<a href="https://tools.liumingye.cn/" rel="nofollow" target="_blank" class="my-2 p-1 text-center text-black-50 kuaijie-a-1"><img  class="border rounded-circle w" src="https://tools.liumingye.cn/favicon.ico" loading="lazy"><h6 class="t1">刘明野的工具箱</h6></a>
 						<a href="https://modelscope.cn/studios/damo/ai_artist/summary?from=baidu_sem" rel="nofollow" target="_blank" class="my-2 p-1 text-center text-black-50 kuaijie-a-1"><img  class="border rounded-circle w" src="https://modelscope.cn/favicon.ico" loading="lazy"><h6 class="t1">ai绘画</h6></a>
 						<a href="https://www.virustotal.com/gui/home/upload" rel="nofollow" target="_blank" class="my-2 p-1 text-center text-black-50 kuaijie-a-1"><img  class="border rounded-circle w" src="https://www.virustotal.com/favicon.ico" loading="lazy"><h6 class="t1">在线查毒</h6></a>
-						<a href="https://api.hkfx.net/" rel="nofollow" target="_blank" class="my-2 p-1 text-center text-black-50 kuaijie-a-1"><img  class="border rounded-circle w" src="https://api.hkfx.net/favicon.ico" loading="lazy"><h6 class="t1">在线查毒</h6></a>
-						<a href="https://www.virustotal.com/gui/home/upload" rel="nofollow" target="_blank" class="my-2 p-1 text-center text-black-50 kuaijie-a-1"><img  class="border rounded-circle w" src="https://www.virustotal.comfavicon.ico" loading="lazy"><h6 class="t1">在线MD5解密</h6></a>
+						<a href="https://api.hkfx.net/" rel="nofollow" target="_blank" class="my-2 p-1 text-center text-black-50 kuaijie-a-1"><img  class="border rounded-circle w" src="https://api.hkfx.net/favicon.ico" loading="lazy"><h6 class="t1">在线MD5解密</h6></a>
+						<a href="https://www.virustotal.com/gui/home/upload" rel="nofollow" target="_blank" class="my-2 p-1 text-center text-black-50 kuaijie-a-1"><img  class="border rounded-circle w" src="https://www.virustotal.comfavicon.ico" loading="lazy"><h6 class="t1">在线查毒</h6></a>
 						<a href="https://www.virustotal.com/gui/home/upload" rel="nofollow" target="_blank" class="my-2 p-1 text-center text-black-50 kuaijie-a-1"><img  class="border rounded-circle w" src="https://www.virustotal.comfavicon.ico" loading="lazy"><h6 class="t1">在线查毒</h6></a>
 						<a href="https://www.virustotal.com/gui/home/upload" rel="nofollow" target="_blank" class="my-2 p-1 text-center text-black-50 kuaijie-a-1"><img  class="border rounded-circle w" src="https://www.virustotal.comfavicon.ico" loading="lazy"><h6 class="t1">在线查毒</h6></a>
 					</div>
@@ -207,7 +208,7 @@
 						<a href="https://movie.coolzhanweb.com/" rel="nofollow" target="_blank" class="my-2 p-1 text-center text-black-50 kuaijie-a-1"><img class="border rounded-circle w" src="https://movie.coolzhanweb.com/favicon.ico" loading="lazy"><h6 class="t1">电影导航</h6></a>
 						<a href="https://ltzhp.ysepan.com/" rel="nofollow" target="_blank" class="my-2 p-1 text-center text-black-50 kuaijie-a-1"><img class="border rounded-circle w" src="https://ltzhp.ysepan.com/favicon.ico" loading="lazy"><h6 class="t1">辣条杂货铺</h6></a>
 						<a href="https://bileizhen.ysepan.com/?xzpd=1" rel="nofollow" target="_blank" class="my-2 p-1 text-center text-black-50 kuaijie-a-1"><img class="border rounded-circle w" src="https://bileizhen.ysepan.com/favicon.ico" loading="lazy"><h6 class="t1">bileizhen的收纳箱</h6></a>
-						<a href="https://qxnav.com/" rel="nofollow" target="_blank" class="my-2 p-1 text-center text-black-50 kuaijie-a-1"><img class="border rounded-circle w" src="https://qxnav.com/favicon.ico" loading="lazy"><h6 class="t1">奇心导航</h6></a>
+						<a href="https://nav.qixinpro.com/" rel="nofollow" target="_blank" class="my-2 p-1 text-center text-black-50 kuaijie-a-1"><img class="border rounded-circle w" src="https://nav.qixinpro.com/favicon.ico" loading="lazy"><h6 class="t1">奇心导航</h6></a>
 						<a href="https://ago.ysepan.com/?xzpd=1" rel="nofollow" target="_blank" class="my-2 p-1 text-center text-black-50 kuaijie-a-1"><img class="border rounded-circle w" src="https://ago.ysepan.com/favicon.ico" loading="lazy"><h6 class="t1">👪怸歪的网盘🔞</h6></a>
 						
 					</div>
