--- a/demo/index/dd.html
+++ b/demo/index/dd.html
@@ -6,11 +6,10 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 		<title>Xiaolan</title>
-		<link rel="Shortcut icon" href="../favicon.ico">
-		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css">
-		<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js"></script>
-		<!-- <link rel="stylesheet" href="../css/bootstrap.min.css"> -->
-		<!-- <script type="text/javascript" src="../js/jquery-3.5.1.min.js"></script> -->
+		<link rel="Shortcut icon" href="../favicon.ico" loading="lazy">
+		<script type="text/javascript" src="data.js"></script>
+		<link rel="stylesheet" href="../css/bootstrap.min.css">
+		<script type="text/javascript" src="../js/jquery-3.5.1.min.js"></script>
 		<link rel="stylesheet" type="text/css" href="../css/index.css"/>
 	</head>
 	<body>
@@ -23,20 +22,20 @@
 
             <div class="mt-3 mx-3">
 				<div class="alert alert-secondary shadow" role="alert">平台</div>
-					<div class="d-flex flex-column align-items-start p-2">
-						<a href="https://www.wolai.com/qianye/guVVV3qJLbrFQQVu3SqLiP" rel="nofollow" target="_blank" class="my-2 p-1 text-black-50"><img class="border rounded-circle w2" src="https://www.jd.com/favicon.ico" loading="lazy"><h6 class="t2">PikPak Win&Mac_By_Shimily电脑版更新日志</h6></a>
-						<a href="https://sumingyd.github.io/OpenCore-Install-Guide/" rel="nofollow" target="_blank" class="my-2 p-1 text-black-50"><img class="border rounded-circle w2" src="https://www.jd.com/favicon.ico" loading="lazy"><h6 class="t2">OpenCore的安装指南</h6></a>
-						<a href="https://lfoo.top/" rel="nofollow" target="_blank" class="my-2 p-1 text-black-50"><img class="border rounded-circle w2" src="https://www.jd.com/favicon.ico" loading="lazy"><h6 class="t2">Domon网络资源聚合</h6></a>
-						<a href="https://zhuangzhuang.io/" rel="nofollow" target="_blank" class="my-2 p-1 text-black-50"><img class="border rounded-circle w2" src="https://www.jd.com/favicon.ico" loading="lazy"><h6 class="t2">壮壮博客</h6></a>
-						<a href="https://189.zheng98.com/" rel="nofollow" target="_blank" class="my-2 p-1 text-black-50"><img class="border rounded-circle w2" src="https://189.zheng98.com/favicon.ico" loading="lazy"><h6 class="t2">adobe下载</h6></a>
-						<a href="https://flowery-espadrille-695.notion.site/7e52fb27108d4b7099aa6245a4d1d9eb" rel="nofollow" target="_blank" class="my-2 p-1 text-black-50"><img class="border rounded-circle w2" src="https://www.jd.com/favicon.ico" loading="lazy"><h6 class="t2">应用集导航</h6></a>
-						<a href="https://orangefox.download/zh-CN/device/dipper" rel="nofollow" target="_blank" class="my-2 p-1 text-black-50"><img class="border rounded-circle w2" src="https://www.jd.com/favicon.ico" loading="lazy"><h6 class="t2">小米8第三方twrp</h6></a>
-						<a href="https://bbs.kafan.cn/thread-2244866-1-1.html" rel="nofollow" target="_blank" class="my-2 p-1 text-black-50"><img class="border rounded-circle w2" src="https://www.jd.com/favicon.ico" loading="lazy"><h6 class="t2">卡巴免费15年</h6></a>
-						<a href="https://github.com/aiboboxx/v2rayfree" rel="nofollow" target="_blank" class="my-2 p-1 text-black-50"><img class="border rounded-circle w2" src="https://www.jd.com/favicon.ico" loading="lazy"><h6 class="t2">免费节点</h6></a>
-						<a href="https://bbs.kafan.cn/thread-2244866-1-1.html" rel="nofollow" target="_blank" class="my-2 p-1 text-black-50"><img class="border rounded-circle w2" src="https://www.jd.com/favicon.ico" loading="lazy"><h6 class="t2">卡巴免费15年</h6></a>
-						<a href="https://bbs.kafan.cn/thread-2244866-1-1.html" rel="nofollow" target="_blank" class="my-2 p-1 text-black-50"><img class="border rounded-circle w2" src="https://www.jd.com/favicon.ico" loading="lazy"><h6 class="t2">卡巴免费15年</h6></a>
-						<a href="https://bbs.kafan.cn/thread-2244866-1-1.html" rel="nofollow" target="_blank" class="my-2 p-1 text-black-50"><img class="border rounded-circle w2" src="https://www.jd.com/favicon.ico" loading="lazy"><h6 class="t2">卡巴免费15年</h6></a>
-						<a href="https://bbs.kafan.cn/thread-2244866-1-1.html" rel="nofollow" target="_blank" class="my-2 p-1 text-black-50"><img class="border rounded-circle w2" src="https://www.jd.com/favicon.ico" loading="lazy"><h6 class="t2">卡巴免费15年</h6></a>
+					<div id="dar1" class="d-flex flex-column align-items-start p-2">
+						'https://www.wolai.com/qianye/guVVV3qJLbrFQQVu3SqLiP','PikPak Win&Mac_By_Shimily电脑版更新日志',
+						'https://sumingyd.github.io/OpenCore-Install-Guide/','OpenCore的安装指南',
+						'https://lfoo.top/','Domon网络资源聚合',
+						'https://zhuangzhuang.io/','壮壮博客',
+						'https://189.zheng98.com/','adobe下载',
+						'https://flowery-espadrille-695.notion.site/7e52fb27108d4b7099aa6245a4d1d9eb','应用集导航',
+						'https://orangefox.download/zh-CN/device/dipper','小米8第三方twrp',
+						'https://bbs.kafan.cn/thread-2244866-1-1.html','卡巴免费15年',
+						'https://github.com/aiboboxx/v2rayfree','免费节点',
+						'https://xxxxx525.com/','switch游戏',
+						'https://bbs.kafan.cn/thread-2244866-1-1.html','卡巴免费15年',
+						'https://bbs.kafan.cn/thread-2244866-1-1.html','卡巴免费15年',
+						'https://bbs.kafan.cn/thread-2244866-1-1.html','卡巴免费15年',
 					</div>
 			</div>
 
@@ -146,6 +145,7 @@
 		</script>
 
 	<div style="display: none;">111</div><!-- 去广告 -->
+	<script>datad()</script><!-- 网站列表数据请求 -->
 	</body>
 	
 
