--- a/demo/index/develop.html
+++ b/demo/index/develop.html
@@ -6,11 +6,9 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<title>Xiaolan</title>
-	<link rel="Shortcut icon" href="../favicon.ico">
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css">
-	<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js"></script>
-	<!-- <link rel="stylesheet" href="../css/bootstrap.min.css"> -->
-	<!-- <script type="text/javascript" src="../js/jquery-3.5.1.min.js"></script> -->
+	<link rel="Shortcut icon" href="../favicon.ico" loading="lazy">
+	<link rel="stylesheet" href="../css/bootstrap.min.css">
+	<script type="text/javascript" src="../js/jquery-3.5.1.min.js"></script>
 	<link rel="stylesheet" type="text/css" href="../css/index.css" />
 </head>
 
