--- a/demo/index/aa.html
+++ b/demo/index/aa.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" data-bs-theme="dark">
+<html lang="en">
 
 	<head>
 		<meta charset="utf-8" />
@@ -35,6 +35,8 @@
 			</div>
 
 		</div>
+
+		<script>dataa()</script><!-- 网站列表数据请求 -->
 
 		<!--背景-->
 		<div class="z-1">
@@ -137,7 +139,7 @@
 		</script>		
 
 	<div style="display: none;">111</div><!-- 去广告 -->
-	<script>dataa()</script><!-- 网站列表数据请求 -->
+	
 	</body>
 
 </html>
