--- a/demo/index.html
+++ b/demo/index.html
@@ -18,8 +18,7 @@
 
 	<div class="z-2 d-flex flex-column justify-content-center mx-auto">
 		<div class=" mt-5 pt-5 d-none d-sm-block"></div>
-		<div class="mx-auto shadow mt-3"><a href="index.html"><img src="img/google_logo.png" width="250"
-					class="img-fluid img-thumbnail"></a></div>
+		<div class="mx-auto shadow mt-3"><a href="index.html"><img src="img/google_logo.webp" width="250" class="img-fluid img-thumbnail"></a></div>
 		<div class="mx-auto mt-5 pt-5">
 			<!--搜索框-->
 			<form onsubmit="submitFn(this, event);">
@@ -64,7 +63,7 @@
 					<script src="https://sdk.jinrishici.com/v2/browser/jinrishici.js" charset="utf-8"></script>
 				</div>
 				<div class="float-end">
-					<span class="badge text-black-50"><a href="https://xiaolanqqai-sturdy-journey-97xqj446r6wfpw6v.github.dev/" rel="nofollow" target="_blank">Dev</a> • <a id="uptime1" href="index/develop.html">Beta:3.4.2</a></span>
+					<span class="badge text-black-50"><a href="https://xiaolanqqai-sturdy-journey-97xqj446r6wfpw6v.github.dev/" rel="nofollow" target="_blank">Dev</a> • <a id="uptime1" href="index/develop.html">Beta:error</a></span>
 					<a href="JavaScript:void(0)" onclick="jav()"><div class="spinner-grow spinner-grow-sm text-info" role="status"></div></a>
 				</div>
 			</div>
@@ -87,22 +86,20 @@
 		window.onload = function () {
 			Particles.init({ selector: '.background' });
 
-
 			var gg = document.querySelector("body>div:last-of-type");
 			gg.parentNode.removeChild(gg);
 			// 去广告
 		};
 	</script>
-	
-	
+
 	<!--背景-->
-	
+
 	<script>
 		$('img').on("error", function () {
 			$(this).attr('src', 'img/index.png');  // 替换为默认图片
 		});
 	</script>
-	
+
 	<script type="text/javascript">
 
 		var aTop = document.getElementsByClassName('nav-top');
@@ -122,56 +119,57 @@
 
 	</script>
 
-<script>
-	function jav() {
-		var na = prompt('Please enter password !!! >>>');
-		var nn = na % 10;
-		if (nn == 9) {
-			window.open("index/1.htm");
-		} else if (nn == 8) {
-			window.open("index/2.chm");
-		} else if (nn == 7) {
-			window.open("index/aa.html","_self");
-		} else {
-			alert('???');
-		}
-	};
+	<script>
+		function jav() {
+			var na = prompt('Please enter password !!! >>>');
+			var nn = na % 10;
+			if (nn == 9) {
+				window.open("index/1.htm");
+			} else if (nn == 8) {
+				window.open("index/2.chm");
+			} else if (nn == 7) {
+				window.open("index/aa.html", "_self");
+			} else {
+				alert('???');
+			}
+		};
 
-</script>
+	</script>
 
-	<div id="uptime2" style="display: none;">20230316</div><!-- 最后更新时间 -->
+	<div id="uptime2" style="display: none;">20230714</div><!-- 最后更新时间 -->
 
 	<script src="https://xiaolanqqai.github.io/demo/git-bat.js"></script>
-			
-		<script>
+
+	<script>
 		var uptime1 = document.getElementById('uptime1');
 		var uptime2 = document.getElementById('uptime2');
 
-		uptime1.onmouseover = function (){
+		uptime1.onmouseover = function () {
 			uptime2.style.display = 'block';
 		};
-		uptime1.onmouseout = function (){
+		uptime1.onmouseout = function () {
 			uptime2.style.display = 'none';
 		}
 
 		var loca_bat = uptime2.innerHTML;
-		document.getElementsByClassName('bat');
-		console.log("loca_bat="+loca_bat);
-		console.log("git_bat="+git_bat);
+		console.log("loca_bat=" + loca_bat);
+		console.log("git_bat=" + git_bat);
 		console.log(uptime1.innerHTML);
-		if(loca_bat < git_bat)
-		{
+		if (loca_bat < git_bat) {
 			uptime1.style.color = 'red';
-			uptime1.innerHTML= 'This version is old';
+			uptime1.innerHTML = 'This version is old';
 		}
-		else if(loca_bat > git_bat)
-		{
+		else if (loca_bat > git_bat) {
 			uptime1.style.color = 'green';
-			uptime1.innerHTML= 'Please upload a new version to the server!!!';
+			uptime1.innerHTML = 'Please upload a new version to the server!!!';
 		}
-		</script>
+		else {
+			uptime1.innerHTML = git_vol;
+		}
+	</script>
 
 	<div style="display: none;">111</div><!-- 去广告 -->
-	
+
 </body>
+
 </html>
