--- a/demo/index.html
+++ b/demo/index.html
@@ -18,7 +18,7 @@
 
 	<div class="z-2 d-flex flex-column justify-content-center mx-auto">
 		<div class=" mt-5 pt-5 d-none d-sm-block"></div>
-		<div class="mx-auto shadow mt-3"><a href="index.html"><img src="img/google_logo.webp" width="250" class="img-fluid img-thumbnail"></a></div>
+		<div class="mx-auto shadow mt-3"><a href="index.html"><img src="img/google_logo.png" width="250" class="img-fluid img-thumbnail"></a></div>
 		<div class="mx-auto mt-5 pt-5">
 			<!--搜索框-->
 			<form onsubmit="submitFn(this, event);">
