--- a/demo/index/develop.html
+++ b/demo/index/develop.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html>
 <head>
 	<meta charset="utf-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -24,17 +23,25 @@
 		<div class="mt-3 mx-3">
 			<div class="alert alert-danger" role="alert">
 				<strong>Please check for version updates regularly ！！！--> </strong>
-				<a href="https://xiaolanqqai.lanzous.com/b01zx4syb" class="badge badge-light">Website update address (code:xiaolan)</a>
 			</div>
 			<div class="alert alert-success shadow" role="alert">
 				<h5 class="alert-heading">BOOSTRAP_v5.3.0-alpha3</h5>
 				<h5 class="alert-heading">JQuery_v3.5.1</h5>
 				<h5 class="alert-heading">Particles_v2.2.3</h5>
 				<hr class="my-2">
-				<h4 class="alert-heading">BETA 3.5.0<span class="badge badge-danger">New</span></h4>
-				<h6 class="float-end">2023-07-14</h6>
-				<p>Website request data segregation</p>
+				<h4 class="alert-heading">BETA 3.5.1<span class="badge badge-danger">New</span></h4>
+				<h6 class="float-end">2023-08-11</h6>
+				<p>Refine and optimize aa pages</p>
 				<hr class="my-2">
+				<h5 class="alert-heading">BETA 3.5.0</h5>
+				<h6 class="float-end">2023-5-20</h6>
+				<p>Website request data segregation</p>
+				<p>Optimizing core code using AI</p>
+				<hr class="my-2">
+				<h5 class="alert-heading">BETA 3.4.3</h5>
+				<h6 class="float-end">2023-5-20</h6>
+				<p>The framework updated to BOOSTRAP_v5.3.0-alpha3</p>
+				<p>Style and framework library request changed to local</p>
 				<hr class="my-2">
 				<h5 class="alert-heading">BETA 3.4.2</h5>
 				<h6 class="float-end">2022-12-20</h6>
@@ -137,7 +144,7 @@
 		});
 	</script>
 	
-	<div id="uptime2" style="display: none;">20230714</div>
+	<div id="uptime2" style="display: none;">20230811</div>
 
 	<script src="https://xiaolanqqai.github.io/demo/git-bat.js"></script>
 			
