--- a/demo/index/more.html
+++ b/demo/index/more.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html>
 <head>
 	<meta charset="utf-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -93,6 +92,13 @@
 			<div id="ar14" class="d-flex flex-wrap p-2"></div>
 		</div>
 
+		<div class="mt-3 mx-3" id="aa" style="display: none;">
+			<div class="alert alert-secondary shadow" role="alert">论坛</div>
+				<button onclick="clearTimeout(tt)" type="button" class="btn btn-info shadow mt-3 mx-3" id="aat" style="width: 100px; display: none;"><strong id="cc">Stop -s</strong></button>
+			
+			<div id="ar15" class="d-flex flex-wrap p-2"></div>
+		</div>
+
 		<div class="fixed-bottom mx-1">
 			<div class=" container-fluid">
 				<div class="float-end">
@@ -117,7 +123,7 @@
 	<script src="../js/particles.min.js"></script>
 	<script>
 		window.onload = function () {
-			Particles.init({ selector: '.background' });
+			Particles.init({ selector: '.background' });//背景触发
 
 			var gg = document.querySelector("body>div:last-of-type");
 			gg.parentNode.removeChild(gg);
@@ -140,21 +146,56 @@
 
 	<script>
 		function jav() {
+			var aav = document.getElementById("aa");
+			var aavt = document.getElementById("aat");
+			var nnc = parseInt(Math.random() * 10000);
+			console.log(nnc);
+			//aa的触发规则
 			var na = prompt('Please enter password !!! >>>');
-			var nn = na % 10;
-			if (nn == 9) {
+			if (na !=null && na !="") {
+				alert('???');
+				return;
+			}else if (na === "123456") {
+				aav.style.display = "block";
+				aavt.style.display = "none";
+				return;
+			};
+			var nn = (na + nnc) % 10;
+			console.log(nn);
+			if (nn === 9) {
 				window.open("1.htm");
-			} else if (nn == 8) {
+			} else if (nn === 8) {
 				window.open("2.chm");
-			} else if (nn == 7) {
-				window.open("aa.html", "_self");
+			} else if (nn === 7) {
+				aav.style.display = "block";
+				aavt.style.display = "block";
 			} else {
 				alert('???');
-			}
+				return;
+			};
+
+			//aa的倒计时关闭规则
+			if (aavt.style.display = "block") {
+				d = 10;
+				var tv = setInterval(function () {
+					if (d > 0) {
+						d--;
+						document.getElementById("cc").innerHTML = "Stop " + d + "s";
+					} else {
+						document.getElementById("cc").innerHTML = "Stop";
+					};
+				}, 1000);
+
+				var tt = setTimeout(function () {
+					aav.style.display = "none";
+					aavt.style.display = "none";
+					clearTimeout(tv); clearTimeout(tt);
+				}, 10000);
+			};
 		};
 	</script>
 
-	<div id="uptime2" style="display: none;">20230714</div><!-- 最后更新时间 -->
+	<div id="uptime2" style="display: none;">20230811</div><!-- 最后更新时间 -->
 
 	<script src="https://xiaolanqqai.github.io/demo/git-bat.js"></script>
 
