--- a/demo/index.html
+++ b/demo/index.html
@@ -13,6 +13,7 @@
 	<link rel="stylesheet" type="text/css" href="css/index.css" />
 </head>
 
+
 <body style="overflow-y: hidden">
 
 	<div class="z-2 d-flex flex-column justify-content-center mx-auto">
@@ -49,10 +50,10 @@
 			</div>
 		</nav>
 		<div class="kuaijie mx-auto mt-3">
-			<div class="nav-ban" style="display: block;"><div id="tar1" class="row row-cols-4 p-2"></div></div>
-			<div class="nav-ban" style="display: none;"><div id="tar2" class="row row-cols-4 p-2"></div></div>
-			<div class="nav-ban" style="display: none;"><div id="tar3" class="row row-cols-4 p-2"></div></div>
-			<div class="nav-ban" style="display: none;"><div id="tar4" class="row row-cols-4 p-2"></div></div>
+			<div class="nav-ban" style="display: block;"><div id="ar1" class="row row-cols-4 p-2"></div></div>
+			<div class="nav-ban" style="display: none;"><div id="ar2" class="row row-cols-4 p-2"></div></div>
+			<div class="nav-ban" style="display: none;"><div id="ar3" class="row row-cols-4 p-2"></div></div>
+			<div class="nav-ban" style="display: none;"><div id="ar4" class="row row-cols-4 p-2"></div></div>
 		</div>
 
 		<div class="fixed-bottom mx-1">
@@ -62,6 +63,7 @@
 				</div>
 				<div class="float-end">
 					<span class="badge text-black-50"><a href="https://xiaolanqqai-sturdy-journey-97xqj446r6wfpw6v.github.dev/" rel="nofollow" target="_blank">Dev</a> • <a id="uptime1" href="index/develop.html">Beta:error</a></span>
+					<span id="state1" class="badge text-bg-success">Success</span>
 					<a><div class="spinner-grow spinner-grow-sm text-info" role="status"></div></a>
 				</div>
 			</div>
@@ -116,11 +118,12 @@
 		};
 	</script>
 
-	<div id="uptime2" style="display: none;">20230811</div><!-- 最后更新时间 -->
+	<div id="uptime2" style="display: none;">20230816</div><!-- 最后更新时间 -->
 
 	<script src="https://xiaolanqqai.github.io/demo/git-bat.js"></script>
 
 	<script>
+		//网页编译版本显示
 		var uptime1 = document.getElementById('uptime1');
 		var uptime2 = document.getElementById('uptime2');
 
@@ -146,6 +149,41 @@
 			uptime1.innerHTML = git_vol;
 		}
 		console.log(uptime1.innerHTML);
+
+
+		//网页物理地址状态显示
+		function isLocalPage() {
+			return window.location.protocol === 'file:';
+		};
+
+		var state1 = document.getElementById('state1');
+
+		if (isLocalPage()) {
+			state1.innerHTML = 'Local';
+			console.log('Web page status:Local');
+		} else {
+			state1.innerHTML = 'Server';
+			console.log('Web page status:Server');
+		};
+	</script>
+
+	<script>
+		//剪贴板内容跳转百度搜索
+		function getClipboardText() {
+			return new Promise((resolve, reject) => {
+				navigator.clipboard.readText().then(text => {
+					resolve(text);
+				}).catch(err => {
+					reject(err);
+				});
+			});
+		}
+
+		getClipboardText().then(text => {
+			window.open("https://www.baidu.com/s?word="+text,"_self");
+		}).catch(err => {
+			console.error('获取剪贴板文本失败：', err);
+		});
 	</script>
 
 	<div style="display: none;">111</div><!-- 去广告 -->
