--- a/demo/index/develop.html
+++ b/demo/index/develop.html
@@ -30,7 +30,11 @@
 				<h5 class="alert-heading">JQuery_v3.5.1</h5>
 				<h5 class="alert-heading">Particles_v2.2.3</h5>
 				<hr class="my-2">
-				<h4 class="alert-heading">BETA 3.5.2<span class="badge badge-danger">New</span></h4>
+				<h4 class="alert-heading">BETA 3.5.3<span class="badge badge-danger">New</span></h4>
+				<h6 class="float-end">2023-08-21</h6>
+				<p>Add List Data Version</p>
+				<hr class="my-2">
+				<h5 class="alert-heading">BETA 3.5.2</h5>
 				<h6 class="float-end">2023-08-16</h6>
 				<p>Update the list reference method of the development page</p>
 				<p>Request to optimize web page icons using 'One for API'</p>
@@ -150,7 +154,7 @@
 		});
 	</script>
 	
-	<div id="uptime2" style="display: none;">20230816</div>
+	<div id="uptime2" style="display: none;">20230821</div>
 
 	<script src="https://xiaolanqqai.github.io/demo/git-bat.js"></script>
 			
@@ -197,6 +201,8 @@
 			state1.innerHTML = 'Server';
 			console.log('Web page status:Server');
 		};
+
+		console.log('web_data='+ lv);//列表数据版本
 	</script>
 
 	<div style="display: none;">111</div><!-- 去广告 -->
