--- a/demo/index/more.html
+++ b/demo/index/more.html
@@ -195,7 +195,7 @@
 		};
 	</script>
 
-	<div id="uptime2" style="display: none;">20230816</div><!-- 最后更新时间 -->
+	<div id="uptime2" style="display: none;">20230821</div><!-- 最后更新时间 -->
 
 	<script src="https://xiaolanqqai.github.io/demo/git-bat.js"></script>
 
@@ -242,6 +242,8 @@
 			state1.innerHTML = 'Server';
 			console.log('Web page status:Server');
 		};
+
+		console.log('web_data='+ lv);//列表数据版本
 	</script>
 
 	<div style="display: none;">111</div><!-- 去广告 -->
