--- a/index/develop.html
+++ b/index/develop.html
@@ -156,7 +156,7 @@
 	
 	<div id="uptime2" style="display: none;">20230821</div>
 
-	<script src="https://xiaolanqqai.github.io/demo/git-bat.js"></script>
+	<script src="https://xiaolanqqai.xyz/git-bat.js"></script>
 			
 	<script>
 		//网页编译版本显示
