--- a/index/dd.html
+++ b/index/dd.html
@@ -72,7 +72,7 @@
 
 	<div id="uptime2" style="display: none;">20230821</div><!-- 最后更新时间 -->
 
-	<script src="https://xiaolanqqai.github.io/demo/git-bat.js"></script>
+	<script src="https://xiaolanqqai.xyz/git-bat.js"></script>
 
 	<script>
 		//网页编译版本显示
