--- a/index/dd.html
+++ b/index/dd.html
@@ -28,7 +28,7 @@
 			<div class=" container-fluid">
 				<div class="float-end">
 					<span class="badge text-black-50"><a href="https://xiaolanqqai-sturdy-journey-97xqj446r6wfpw6v.github.dev/" rel="nofollow" target="_blank">Dev</a> • <a id="uptime1" href="../index/develop.html">Beta:error</a></span>
-					<span id="state1" class="badge text-bg-success">Success</span>
+					<span id="state1" class="badge text-bg-success">Error</span>
 					<a><div class="spinner-grow spinner-grow-sm text-info" role="status"></div></a>
 				</div>
 			</div>
