--- a/index/develop.html
+++ b/index/develop.html
@@ -23,94 +23,98 @@
 		</div>
 		<div class="mt-3 mx-3">
 			<div class="alert alert-danger" role="alert">
-				<strong>Please check for version updates regularly ！！！--> </strong>
+				<strong>请定期检查版本更新 ！！！--> </strong>
 			</div>
 			<div class="alert alert-success shadow" role="alert">
 				<h5 class="alert-heading">BOOSTRAP_v5.3.0-alpha3</h5>
 				<h5 class="alert-heading">JQuery_v3.5.1</h5>
 				<h5 class="alert-heading">Particles_v2.2.3</h5>
 				<hr class="my-2">
-				<h4 class="alert-heading">BETA 3.5.3<span class="badge badge-danger">New</span></h4>
+				<h4 class="alert-heading">BETA 3.5.4<span class="badge badge-danger">New</span></h4>
+				<h6 class="float-end">2023-09-12</h6>
+				<p>注册域名: xiaolanqqai.xyz</p>
+				<p>摒弃英文，发扬中文</p>
+				<hr class="my-2">
+				<h5 class="alert-heading">BETA 3.5.3</h5>
 				<h6 class="float-end">2023-08-21</h6>
-				<p>Add List Data Version</p>
+				<p>添加列表数据版本号</p>
 				<hr class="my-2">
 				<h5 class="alert-heading">BETA 3.5.2</h5>
 				<h6 class="float-end">2023-08-16</h6>
-				<p>Update the list reference method of the development page</p>
-				<p>Request to optimize web page icons using 'One for API'</p>
-				<p>Add physical address status display for web pages</p>
-				<p>Skip clipboard content to Baidu search</p>
+				<p>更新开发信息页面的列表引用算法</p>
+				<p>使用“一 API”优化网页图标请求</p>
+				<p>首页获取剪贴板内容到百度搜索</p>
+				<p>为网页添加物理地址状态显示。</p>
 				<hr class="my-2">
 				<h5 class="alert-heading">BETA 3.5.1</h5>
 				<h6 class="float-end">2023-08-11</h6>
-				<p>Refine and optimize aa pages</p>
+				<p>优化aa页面算法。</p>
 				<hr class="my-2">
 				<h5 class="alert-heading">BETA 3.5.0</h5>
 				<h6 class="float-end">2023-5-20</h6>
-				<p>Website request data segregation</p>
-				<p>Optimizing core code using AI</p>
+				<p>分离式请求网站列表数据。</p>
+				<p>使用AI优化网站列表核心算法。</p>
 				<hr class="my-2">
 				<h5 class="alert-heading">BETA 3.4.3</h5>
 				<h6 class="float-end">2023-5-20</h6>
-				<p>The framework updated to BOOSTRAP_v5.3.0-alpha3</p>
-				<p>Style and framework library request changed to local</p>
+				<p>更新网站主框架版本为：BOOSTRAP_v5.3.0-alpha3</p>
+				<p>样式和框架库文件请求更改为本地请求。</p>
 				<hr class="my-2">
 				<h5 class="alert-heading">BETA 3.4.2</h5>
 				<h6 class="float-end">2022-12-20</h6>
-				<p>The framework updated to BOOSTRAP_v5.2.3</p>
+				<p>更新网站主框架版本为：BOOSTRAP_v5.2.3</p>
 				<hr class="my-2">
 				<h5 class="alert-heading">BETA 3.4.1</h5>
 				<h6 class="float-end">2022-11-12</h6>
-				<p>The framework updated to BOOSTRAP_v5.2.2</p>
+				<p>更新网站主框架版本为：BOOSTRAP_v5.2.2</p>
 				<hr class="my-2">
 				<h5 class="alert-heading">BETA 3.3.0</h5>
 				<h6 class="float-end">2022-07-04</h6>
-				<p>The framework updated to BOOSTRAP_v5.2.0_Beta1.</p>
+				<p>更新网站主框架版本为：BOOSTRAP_v5.2.0_Beta1.</p>
 				<hr class="my-2">
 				<h5 class="alert-heading">BETA 3.2.3</h5>
 				<h6 class="float-end">2022-06-30</h6>
-				<p>Improve picture loading speed.
-					<br>Update more links.
+				<p>使用延迟算法加载图标。
+					<br>更新更多的网站列表。
 				</p>
 				<hr class="my-2">
 				<h5 class="alert-heading">BETA 3.2.1</h5>
 				<h6 class="float-end">2021-11-08</h6>
-				<p>Add "Poetry of the Day" control.
-					<br>Organize links and add 9 links.
+				<p>添加“每日诗歌”插件。
+					<br>更新更多的网站列表。
 				</p>
 				<hr class="my-2">
 				<h5 class="alert-heading">BETA 3.2</h5>
 				<h6 class="float-end">2021-10-17</h6>
-				<p>The framework updated to BOOSTRAP_v5.1.3.</p>
+				<p>更新网站主框架版本为：BOOSTRAP_v5.1.3.</p>
 				<hr class="my-2">
 				<h5 class="alert-heading">BETA 3.1</h5>
 				<h6 class="float-end">2021-09-20</h6>
-				<p>Minor adjustments to the interface.
-					<br>The framework updated to BOOSTRAP_v5.0.0-beta2.
+				<p>对界面进行样式优化。
+					<br>更新网站主框架版本为：BOOSTRAP_v5.0.0-beta2.
 				</p>
 				<hr class="my-2">
 				<h5 class="alert-heading">BETA 3.0</h5>
 				<h6 class="float-end">2021-11-08</h6>
-				<p>The framework updated to BOOSTRAP_v5.0.0-beta1.</p>
+				<p>更新网站主框架版本为：BOOSTRAP_v5.0.0-beta1.</p>
 				<hr class="my-2">
 				<h5 class="alert-heading">BETA 2.4</h5>
 				<h6 class="float-end">2021-11-08</h6>
-				<p>Add web development details page and more.</p>
+				<p>添加web开发详细信息页面和网页列表概览。</p>
 				<hr class="my-2">
 				<h5 class="alert-heading">BETA 2.3</h5>
 				<h6 class="float-end">2021-11-08</h6>
-				<p class="mb-0">Introduce boostrap-v4 framework.
-					<br>Change the page navigation bar to a new style to reduce the performance of the wallpaper.
+				<p class="mb-0">升级主框架boostrap-v4.
+					<br>将页面导航栏更改为新算法以提供网页加载速度。
 				</p>
 			</div>
-			<div class="alert alert-info shadow" role="alert">Old site version 2.4 --> 
-				<a href="https://xiaolanqqai.github.io/" class="badge badge-light">Website address</a>
+			<div class="alert alert-info shadow" role="alert">旧站点版本 2.4 --> 
+				<a href="https://xiaolanqqai.github.io/" class="badge badge-light">网址</a>
 			</div>
-			<div class="alert alert-secondary shadow" role="alert">This website is based on ---</div>
-			<div class="alert alert-info shadow" role="alert">Old site version 1.0 --> 
-				<a href="https://xiaolanqqai.github.io/" class="badge badge-light">Website address</a>
+			<div class="alert alert-info shadow" role="alert">旧站点版本 1.0 --> 
+				<a href="https://xiaolanqqai.github.io/" class="badge badge-light">网址</a>
 			</div>
-			<div class="alert alert-secondary shadow" role="alert">This website is based on ---</div>
+			<div class="alert alert-secondary shadow" role="alert">此网站基于 ---</div>
 			<div class="d-flex flex-wrap p-2" id="ar1"></div>
 		</div>
 
@@ -118,7 +122,7 @@
 			<div class="container-fluid">
 				<div class="float-end">
 					<span class="badge text-black-50"><a href="https://xiaolanqqai-sturdy-journey-97xqj446r6wfpw6v.github.dev/" rel="nofollow" target="_blank">Dev</a> • <a id="uptime1" href="#">Beta:error</a></span>
-					<span id="state1" class="badge text-bg-success">Success</span>
+					<span id="state1" class="badge text-bg-success">Error</span>
 					<div class="spinner-grow spinner-grow-sm text-info" role="status"></div>
 				</div>
 			</div>
