--- a/index/develop.html
+++ b/index/develop.html
@@ -34,6 +34,7 @@
 				<h6 class="float-end">2023-09-12</h6>
 				<p>注册域名: xiaolanqqai.xyz</p>
 				<p>摒弃英文，发扬中文</p>
+				<p>更新文件布局，demo网站转正</p>
 				<hr class="my-2">
 				<h5 class="alert-heading">BETA 3.5.3</h5>
 				<h6 class="float-end">2023-08-21</h6>
