--- a/index/develop.html
+++ b/index/develop.html
@@ -23,7 +23,7 @@
 		</div>
 		<div class="mt-3 mx-3">
 			<div class="alert alert-danger" role="alert">
-				<strong>请定期检查版本更新 ！！！--> </strong>
+				<strong>离线版本的请定期检查更新 ！！！--> </strong>
 			</div>
 			<div class="alert alert-success shadow" role="alert">
 				<h5 class="alert-heading">BOOSTRAP_v5.3.0-alpha3</h5>
@@ -32,82 +32,78 @@
 				<hr class="my-2">
 				<h4 class="alert-heading">BETA 3.5.4<span class="badge badge-danger">New</span></h4>
 				<h6 class="float-end">2023-09-12</h6>
-				<p>注册域名: xiaolanqqai.xyz</p>
-				<p>摒弃英文，发扬中文</p>
-				<p>更新文件布局，demo网站转正</p>
+				<p>1：注册域名: xiaolanqqai.xyz</p>
+				<p>2：摒弃英文，发扬中文</p>
+				<p>3：更新文件布局，demo网站转正</p>
 				<hr class="my-2">
 				<h5 class="alert-heading">BETA 3.5.3</h5>
 				<h6 class="float-end">2023-08-21</h6>
-				<p>添加列表数据版本号</p>
+				<p>1：添加列表数据版本号</p>
 				<hr class="my-2">
 				<h5 class="alert-heading">BETA 3.5.2</h5>
 				<h6 class="float-end">2023-08-16</h6>
-				<p>更新开发信息页面的列表引用算法</p>
-				<p>使用“一 API”优化网页图标请求</p>
-				<p>首页获取剪贴板内容到百度搜索</p>
-				<p>为网页添加物理地址状态显示。</p>
+				<p>1：更新开发信息页面的列表引用算法</p>
+				<p>2：使用“一 API”优化网页图标请求</p>
+				<p>3：首页获取剪贴板内容到百度搜索</p>
+				<p>4：为网页添加物理地址状态显示。</p>
 				<hr class="my-2">
 				<h5 class="alert-heading">BETA 3.5.1</h5>
 				<h6 class="float-end">2023-08-11</h6>
-				<p>优化aa页面算法。</p>
+				<p>1：优化aa页面算法。</p>
 				<hr class="my-2">
 				<h5 class="alert-heading">BETA 3.5.0</h5>
 				<h6 class="float-end">2023-5-20</h6>
-				<p>分离式请求网站列表数据。</p>
-				<p>使用AI优化网站列表核心算法。</p>
+				<p>1：分离式请求网站列表数据。</p>
+				<p>2：使用AI优化网站列表核心算法。</p>
 				<hr class="my-2">
 				<h5 class="alert-heading">BETA 3.4.3</h5>
 				<h6 class="float-end">2023-5-20</h6>
-				<p>更新网站主框架版本为：BOOSTRAP_v5.3.0-alpha3</p>
-				<p>样式和框架库文件请求更改为本地请求。</p>
+				<p>1：更新网站主框架版本为：BOOSTRAP_v5.3.0-alpha3</p>
+				<p>2：样式和框架库文件请求更改为本地请求。</p>
 				<hr class="my-2">
 				<h5 class="alert-heading">BETA 3.4.2</h5>
 				<h6 class="float-end">2022-12-20</h6>
-				<p>更新网站主框架版本为：BOOSTRAP_v5.2.3</p>
+				<p>1：更新网站主框架版本为：BOOSTRAP_v5.2.3</p>
 				<hr class="my-2">
 				<h5 class="alert-heading">BETA 3.4.1</h5>
 				<h6 class="float-end">2022-11-12</h6>
-				<p>更新网站主框架版本为：BOOSTRAP_v5.2.2</p>
+				<p>1：更新网站主框架版本为：BOOSTRAP_v5.2.2</p>
 				<hr class="my-2">
 				<h5 class="alert-heading">BETA 3.3.0</h5>
 				<h6 class="float-end">2022-07-04</h6>
-				<p>更新网站主框架版本为：BOOSTRAP_v5.2.0_Beta1.</p>
+				<p>1：更新网站主框架版本为：BOOSTRAP_v5.2.0_Beta1.</p>
 				<hr class="my-2">
 				<h5 class="alert-heading">BETA 3.2.3</h5>
 				<h6 class="float-end">2022-06-30</h6>
-				<p>使用延迟算法加载图标。
-					<br>更新更多的网站列表。
-				</p>
+				<p>1：使用延迟算法加载图标。</p>
+				<p>2：更新更多的网站列表。</p>
 				<hr class="my-2">
 				<h5 class="alert-heading">BETA 3.2.1</h5>
 				<h6 class="float-end">2021-11-08</h6>
-				<p>添加“每日诗歌”插件。
-					<br>更新更多的网站列表。
-				</p>
+				<p>1：添加“每日诗歌”插件。
+				<p>2：更新更多的网站列表。</p>
 				<hr class="my-2">
 				<h5 class="alert-heading">BETA 3.2</h5>
 				<h6 class="float-end">2021-10-17</h6>
-				<p>更新网站主框架版本为：BOOSTRAP_v5.1.3.</p>
+				<p>1：更新网站主框架版本为：BOOSTRAP_v5.1.3.</p>
 				<hr class="my-2">
 				<h5 class="alert-heading">BETA 3.1</h5>
 				<h6 class="float-end">2021-09-20</h6>
-				<p>对界面进行样式优化。
-					<br>更新网站主框架版本为：BOOSTRAP_v5.0.0-beta2.
-				</p>
+				<p>1：对界面进行样式优化。</p>
+				<p>2：更新网站主框架版本为：BOOSTRAP_v5.0.0-beta2.</p>
 				<hr class="my-2">
 				<h5 class="alert-heading">BETA 3.0</h5>
 				<h6 class="float-end">2021-11-08</h6>
-				<p>更新网站主框架版本为：BOOSTRAP_v5.0.0-beta1.</p>
+				<p>1：更新网站主框架版本为：BOOSTRAP_v5.0.0-beta1.</p>
 				<hr class="my-2">
 				<h5 class="alert-heading">BETA 2.4</h5>
 				<h6 class="float-end">2021-11-08</h6>
-				<p>添加web开发详细信息页面和网页列表概览。</p>
+				<p>1：添加web开发详细信息页面和网页列表概览。</p>
 				<hr class="my-2">
 				<h5 class="alert-heading">BETA 2.3</h5>
 				<h6 class="float-end">2021-11-08</h6>
-				<p class="mb-0">升级主框架boostrap-v4.
-					<br>将页面导航栏更改为新算法以提供网页加载速度。
-				</p>
+				<p>1：升级主框架boostrap-v4.</p>
+				<p>2：将页面导航栏更改为新算法以提供网页加载速度。</p>
 			</div>
 			<div class="alert alert-info shadow" role="alert">旧站点版本 2.4 --> 
 				<a href="https://xiaolanqqai.github.io/" class="badge badge-light">网址</a>
