--- a/index/more.html
+++ b/index/more.html
@@ -17,7 +17,7 @@
 
 	<div class="z-2 d-flex flex-column mx-auto">
 		<div class="d-flex flex-row">
-			<button onclick="window.location.href = '../index.html'" type="button" class="btn btn-info shadow mt-3 mx-3" style="width: 100px;"><strong>Back</strong></button>
+			<button onclick="window.location.href = '../index.html'" type="button" class="btn btn-info shadow mt-3 mx-3" style="width: 100px;"><strong>返回</strong></button>
 			<button onclick="window.location.href = 'dd.html'" type="button" class="btn btn-info shadow mt-3" style="width: 100px;"><strong>DD</strong></button>
 		</div>
 
