--- a/index/develop.html
+++ b/index/develop.html
@@ -33,6 +33,7 @@
 				<h4 class="alert-heading">BETA 3.5.5<span class="badge badge-danger">New</span></h4>
 				<h6 class="float-end">2023-09-15</h6>
 				<p>进一步优化more的列表算法，但存在报错</p>
+				<p>合并所有页面的JavaScript引用</p>
 				<hr class="my-2">
 				<h5 class="alert-heading">BETA 3.5.4</h5>
 				<h6 class="float-end">2023-09-12</h6>
