--- a/index/dd.html
+++ b/index/dd.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<title>Xiaolan</title>
 	<link rel="Shortcut icon" href="../favicon.ico" loading="lazy">
-	<script type="text/javascript" src="data.js"></script>
+	<script type="text/javascript" src="../js/data.js"></script>
 	<link rel="stylesheet" href="../css/bootstrap.min.css">
 	<script type="text/javascript" src="../js/jquery-3.5.1.min.js"></script>
 	<link rel="stylesheet" type="text/css" href="../css/index.css" />
@@ -56,7 +56,7 @@
 		});
 	</script>
 
-	<div id="uptime2" style="display: none;">20230915</div><!-- 最后更新时间 -->
+	<div id="uptime2" style="display: none;">20230918</div><!-- 最后更新时间 -->
 
 	<script src="https://xiaolanqqai.xyz/git-bat.js"></script>
 
