--- a/index/develop.html
+++ b/index/develop.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<title>Xiaolan</title>
 	<link rel="Shortcut icon" href="../favicon.ico" loading="lazy">
-	<script type="text/javascript" src="data.js"></script>
+	<script type="text/javascript" src="../js/data.js"></script>
 	<link rel="stylesheet" href="../css/bootstrap.min.css">
 	<script type="text/javascript" src="../js/jquery-3.5.1.min.js"></script>
 	<link rel="stylesheet" type="text/css" href="../css/index.css" />
@@ -30,7 +30,11 @@
 				<h5 class="alert-heading">JQuery_v3.5.1</h5>
 				<h5 class="alert-heading">Particles_v2.2.3</h5>
 				<hr class="my-2">
-				<h4 class="alert-heading">BETA 3.5.5<span class="badge badge-danger">New</span></h4>
+				<h4 class="alert-heading">BETA 3.5.6<span class="badge badge-danger">New</span></h4>
+				<h6 class="float-end">2023-09-18</h6>
+				<p>进一步优化more的列表算法</p>
+				<hr class="my-2">
+				<h5 class="alert-heading">BETA 3.5.5</h5>
 				<h6 class="float-end">2023-09-15</h6>
 				<p>进一步优化more的列表算法，但存在报错</p>
 				<p>合并所有页面的JavaScript引用</p>
@@ -151,7 +155,7 @@
 		});
 	</script>
 	
-	<div id="uptime2" style="display: none;">20230915</div>
+	<div id="uptime2" style="display: none;">20230918</div>
 
 	<script src="https://xiaolanqqai.xyz/git-bat.js"></script>
 			
