--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<title>Xiaolan</title>
 	<link rel="Shortcut icon" href="favicon.ico" loading="lazy">
-	<script type="text/javascript" src="index/data.js"></script>
+	<script type="text/javascript" src="js/data.js"></script>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<script type="text/javascript" src="js/jquery-3.5.1.min.js"></script>
 	<link rel="stylesheet" type="text/css" href="css/search-form.css">
