--- a/index/dd.html
+++ b/index/dd.html
@@ -58,7 +58,7 @@
 
 	<div id="uptime2" style="display: none;">20230918</div><!-- 最后更新时间 -->
 
-	<script src="https://xiaolanqqai.xyz/git-bat.js"></script>
+	<script src="https://xiaolanqqai.xyz/js/git-bat.js"></script>
 
 	<script src="../js/foot.js"></script>
 
