--- a/index/develop.html
+++ b/index/develop.html
@@ -157,7 +157,7 @@
 	
 	<div id="uptime2" style="display: none;">20230918</div>
 
-	<script src="https://xiaolanqqai.xyz/git-bat.js"></script>
+	<script src="https://xiaolanqqai.xyz/js/git-bat.js"></script>
 			
 	<script src="../js/foot.js"></script>
 
