--- a/index/develop.html
+++ b/index/develop.html
@@ -30,14 +30,16 @@
 				<h5 class="alert-heading">JQuery_v3.5.1</h5>
 				<h5 class="alert-heading">Particles_v2.2.3</h5>
 				<hr class="my-2">
+				<h5 class="alert-heading">网站数据_v0.6_20231007</h5>
+				<hr class="my-2">
 				<h4 class="alert-heading">BETA 3.5.6<span class="badge badge-danger">New</span></h4>
 				<h6 class="float-end">2023-09-18</h6>
-				<p>进一步优化more的列表算法</p>
+				<p>1：进一步优化more的列表算法</p>
 				<hr class="my-2">
 				<h5 class="alert-heading">BETA 3.5.5</h5>
 				<h6 class="float-end">2023-09-15</h6>
-				<p>进一步优化more的列表算法，但存在报错</p>
-				<p>合并所有页面的JavaScript引用</p>
+				<p>1：进一步优化more的列表算法，但存在报错</p>
+				<p>2：合并所有页面的JavaScript引用</p>
 				<hr class="my-2">
 				<h5 class="alert-heading">BETA 3.5.4</h5>
 				<h6 class="float-end">2023-09-12</h6>
@@ -52,7 +54,7 @@
 				<h5 class="alert-heading">BETA 3.5.2</h5>
 				<h6 class="float-end">2023-08-16</h6>
 				<p>1：更新开发信息页面的列表引用算法</p>
-				<p>2：使用“一 API”优化网页图标请求</p>
+				<p>2：使用“一为 • API”优化网页图标请求</p>
 				<p>3：首页获取剪贴板内容到百度搜索</p>
 				<p>4：为网页添加物理地址状态显示。</p>
 				<hr class="my-2">
