--- a/index/dd.html
+++ b/index/dd.html
@@ -17,6 +17,7 @@
 	<div class="z-2 d-flex flex-column mx-auto">
 		<div class="d-flex flex-row">
 			<button onclick="window.location.href = '../index.html'" type="button" class="btn btn-info shadow mt-3 mx-3" style="width: 100px;"><strong>返回</strong></button>
+			<button onclick="window.location.href = 'more.html'" type="button" class="btn btn-info shadow mt-3" style="width: 100px;"><strong>More</strong></button>
 		</div>
 
 		<div class="mt-3 mx-3">
