--- a/index/develop.html
+++ b/index/develop.html
@@ -33,7 +33,12 @@
 				<hr class="my-2">
 				<h5 class="alert-heading">网站数据_v0.6_20231007</h5>
 				<hr class="my-2">
-				<h4 class="alert-heading">BETA 3.5.6<span class="badge badge-danger">New</span></h4>
+				<h4 class="alert-heading">BETA 3.5.7<span class="badge badge-danger">New</span></h4>
+				<h6 class="float-end">2023-10-09</h6>
+				<p>1：优化dd，develop的返回跳转</p>
+				<p>2：优化index样式的注释错误</p>
+				<hr class="my-2">
+				<h5 class="alert-heading">BETA 3.5.6</h5>
 				<h6 class="float-end">2023-09-18</h6>
 				<p>1：进一步优化more的列表算法</p>
 				<hr class="my-2">
