--- a/index/develop.html
+++ b/index/develop.html
@@ -23,7 +23,7 @@
 			<button onclick="window.location.href = '../demo20230424.rar'" type="button" class="btn btn-info shadow mt-3" style="width: 100px;"><strong>ZIP</strong></button>
 		</div>
 		<div class="mt-3 mx-3">
-			<div class="alert alert-danger" role="alert">
+			<div id="state2" class="alert alert-danger" style="display: block;" role="alert">
 				<strong>离线版本的请定期检查更新 ！！！--> </strong>
 			</div>
 			<div class="alert alert-success shadow" role="alert">
@@ -33,7 +33,11 @@
 				<hr class="my-2">
 				<h5 class="alert-heading">网站数据_v0.6_20231007</h5>
 				<hr class="my-2">
-				<h4 class="alert-heading">BETA 3.5.7<span class="badge badge-danger">New</span></h4>
+				<h4 class="alert-heading">BETA 3.5.8<span class="badge badge-danger">New</span></h4>
+				<h5 class="float-end">2023-10-12</h5>
+				<p>1：more页面增加搜索框</p>
+				<hr class="my-2">
+				<h5 class="alert-heading">BETA 3.5.7</h5>
 				<h6 class="float-end">2023-10-09</h6>
 				<p>1：优化dd，develop的返回跳转</p>
 				<p>2：优化index样式的注释错误</p>
