--- a/index/more.html
+++ b/index/more.html
@@ -18,13 +18,27 @@
 		<div class="d-flex flex-row">
 			<button onclick="window.location.href = '../index.html'" type="button" class="btn btn-info shadow mt-3 mx-3" style="width: 100px;"><strong>返回</strong></button>
 			<button onclick="window.location.href = 'dd.html'" type="button" class="btn btn-info shadow mt-3" style="width: 100px;"><strong>DD</strong></button>
+			<form class="more-tag d-flex mx-3" role="search">
+				<input id="txt" class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+				<button id="btn" class="btn btn-outline-success" type="submit">Search</button>
+			</form>
+			<script type="text/javascript">
+				var oTxt = document.getElementById("txt");
+				var oBtn = document.getElementById("btn");
+				oBtn.onclick = function () {
+					var oValue = oTxt.value;
+					window.open("https://www.baidu.com/s?wd=" + oValue);
+				};
+			</script>
+			<div class="btn-group">
+				<button class="more-tag btn btn-secondary dropdown-toggle" type="button">Default dropdown</button>
+			</div>
 		</div>
 		<div class="d-flex flex-column" id="ff"></div>
 
 		<div class="mt-3 mx-3" id="aa" style="display: none;">
 			<div class="alert alert-secondary shadow" role="alert">论坛</div>
 				<button onclick="clearTimeout(tt)" type="button" class="btn btn-info shadow mt-3 mx-3" id="aat" style="width: 100px; display: none;"><strong id="cc">Stop -s</strong></button>
-			
 			<div id="ar16" class="d-flex flex-wrap p-2"></div>
 		</div>
 
