--- a/index/more.html
+++ b/index/more.html
@@ -22,18 +22,64 @@
 				<input id="txt" class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
 				<button id="btn" class="btn btn-outline-success" type="submit">Search</button>
 			</form>
-			<script type="text/javascript">
-				var oTxt = document.getElementById("txt");
-				var oBtn = document.getElementById("btn");
-				oBtn.onclick = function () {
-					var oValue = oTxt.value;
-					window.open("https://www.baidu.com/s?wd=" + oValue);
-				};
-			</script>
 			<div class="btn-group">
-				<button class="more-tag btn btn-secondary dropdown-toggle" type="button">Default dropdown</button>
+				<button id="more-s" class="more-tag btn btn-info dropdown-toggle" type="button">Baidu</button>
 			</div>
 		</div>
+		<div class="d-flex flex-column">
+			<div class="mt-3 mx-3" id="more-b" style="display: none;">
+				<button onclick="a1()" class="col my-2 p-1 text-center text-black-50 kuaijie-a-1"><img class="border rounded-circle w" src="https://api.iowen.cn/favicon/www.bilibili.com.png" loading="lazy"><h6 class="t1">bilibili</h6></button>
+			</div>
+		</div>
+
+		<script type="text/javascript">
+			var oTxt = document.getElementById("txt");
+			var oBtn = document.getElementById("btn");
+			var oMoreS = document.getElementById("more-s");
+			var oMoreB = 0;
+			var oMoreC = document.getElementById("more-b");
+			oMoreS.onclick = function () {
+				if (oMoreC.style.display == "none"){
+					oMoreC.style.display = "block";
+				}else{
+					oMoreC.style.display = "none";
+				};
+			};
+			function a1 (){
+				oMoreS.innerHTML = "bilibili";
+				oMoreB = 1;
+				oMoreC.style.display = "none";
+			}
+			function a2 (){
+				oMoreS.innerHTML = "bing";
+				oMoreB = 2;
+				oMoreC.style.display = "none";
+			}
+			function a3 (){
+				oMoreS.innerHTML = "google";
+				oMoreB = 3;
+				oMoreC.style.display = "none";
+			}
+
+			oBtn.onclick = function () {
+				var oValue = oTxt.value;
+				if (oValue == "") {
+					alert("请输入内容");
+					return;
+				}else if (oMoreB == 0) {
+					window.open("https://www.baidu.com/s?wd=" + oValue);
+				}else if (oMoreB == 1) {
+					window.open("https://search.bilibili.com/all?keyword=" + oValue + "&from_source=webtop_search&spm_id_from=333.937");
+				}else if (oMoreB == 2) {
+					window.open("https://www.bing.com/search?q=" + oValue);
+				}else if (oMoreB == 3) {
+					window.open("https://www.google.com.hk/search?q=" + oValue);
+				};
+			};
+		</script>
+
+
+		<!-- 头部导航栏 -->
 		<div class="d-flex flex-column" id="ff"></div>
 
 		<div class="mt-3 mx-3" id="aa" style="display: none;">
