--- a/index/more.html
+++ b/index/more.html
@@ -29,6 +29,8 @@
 		<div class="d-flex flex-column">
 			<div class="mt-3 mx-3" id="more-b" style="display: none;">
 				<button onclick="a1()" class="col my-2 p-1 text-center text-black-50 kuaijie-a-1"><img class="border rounded-circle w" src="https://api.iowen.cn/favicon/www.bilibili.com.png" loading="lazy"><h6 class="t1">bilibili</h6></button>
+				<button onclick="a2()" class="col my-2 p-1 text-center text-black-50 kuaijie-a-1"><img class="border rounded-circle w" src="https://api.iowen.cn/favicon/www.bing.com.png" loading="lazy"><h6 class="t1">bing</h6></button>
+				<button onclick="a3()" class="col my-2 p-1 text-center text-black-50 kuaijie-a-1"><img class="border rounded-circle w" src="https://api.iowen.cn/favicon/www.google.com.png" loading="lazy"><h6 class="t1">google.hk</h6></button>
 			</div>
 		</div>
 
